--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -12,7 +12,11 @@ extism-pdk = "1"
 once_cell = "1.16"
 anyhow = { workspace = true }
 quickjs-wasm-rs = "3"
-chrono = { version = "0.4", default_features = false, features = ["clock"]}
+chrono = { version = "0.4", default_features = false, features = ["clock"] }
+javy = { version = "2.2.0", default_features = false, features = [
+    "json",
+    "messagepack",
+] }
 
 [lib]
 crate_type = ["cdylib"]
