[misc] Renames. Examples cleanup. Bake in the copyright notice+disclaimer

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "js-pdk-cli"
+name = "js-cli"
 authors.workspace = true
 version.workspace = true
 edition.workspace = true
@@ -7,7 +7,7 @@ license.workspace = true
 build = "build.rs"
 
 [[bin]]
-name = "extism-js"
+name = "apoxy-js"
 path = "src/main.rs"
 
 [dependencies]
