--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -17,6 +17,8 @@ javy = { version = "2.2.0", default_features = false, features = [
     "json",
     "messagepack",
 ] }
+rmp-serde = "1.3.0"
+serde = "1.0.203"
 
 [lib]
 crate_type = ["cdylib"]
